# ComfyUI-MotionCapture

./: .gitignore  BVH_PIPELINE_GUIDE.md  LICENSE  README.md  __init__.py  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  index.html  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: prestartup_script-checkpoint.py
assets/: rigged_human_vroid.fbx  tennis.npz
dev/: index.html
dev/linux-cpu/: models.json
dev/linux-gpu/: index.html
dev/windows-cpu/: results.json
dev/windows-gpu/: index.html  models.json
dev/windows-portable-cpu/: index.html  models.json
dev/windows-portable-gpu/: index.html
lib/: blender_addon_installer.py  retargeting_configs.py
main/: index.html
main/linux-cpu/: index.html  results.json
main/linux-gpu/: models.json  results.json
main/windows-cpu/: index.html  models.json
nodes/: __init__.py  bvh_retarget_node.py  comfy-env.toml  dpvo_loader_node.py  fbx_loader_node.py  fbx_preview_node.py  gvhmr_utils.py  inference_node.py  load_smpl_node.py  loader_node.py  mhr_viewer_node.py  rest_pose_node.py  retarget_node.py  sam3d_inference_node.py  sam3d_loader_node.py  save_mhr_node.py  save_smpl_node.py  smpl_camera_viewer_node.py  smpl_retarget_node.py  smpl_to_bvh_node.py  smpl_to_mixamo_node.py  utils.py  viewer_node.py
web/: bvh_viewer.js  fbx_preview.js  mhr_viewer.js  smpl_viewer.js
workflows/: GVHMR_cameramotion.json  GVHMR_inference-Copy1.json  GVHMR_inference.json  GVHMR_inference_movingcamera.json  load_camera_traj.json  smpl_to_bvh_pipeline.json  smpl_to_mixamo_debug.json
(+44 files in other folders)
